# tjr_monad

./: .gitignore  Makefile  README.md  bash_env.sh  dune-project  opam  tjr_monad.ml  tjr_monad.opam  tjr_monad_sig.ml
.dockerfile/: Dockerfile.opam_with_pinning  Makefile
.old/: META  Makefile  bash_env.sh
docs/: index.html
docs/tjr_monad/: index.html
docs/tjr_monad/Tjr_monad/: index.html
docs/tjr_monad/Tjr_monad/Event/: index.html
docs/tjr_monad/Tjr_monad/Imperative/: index.html
docs/tjr_monad/Tjr_monad/Imperative/Internal/: index.html
docs/tjr_monad/Tjr_monad/Lwt_instance/: index.html
docs/tjr_monad/Tjr_monad/Lwt_instance/Internal/: index.html
docs/tjr_monad/Tjr_monad/Monad_ops/: index.html
docs/tjr_monad/Tjr_monad/Mref/: index.html
docs/tjr_monad/Tjr_monad/Mref_plus/: index.html
docs/tjr_monad/Tjr_monad/State_passing/: index.html
docs/tjr_monad/Tjr_monad/State_passing/Internal/: index.html
docs/tjr_monad/Tjr_monad/State_passing/Internal/Iso/: index.html
docs/tjr_monad/Tjr_monad/State_passing/Internal/Made/: index.html
docs/tjr_monad/Tjr_monad/State_passing/Internal/Make/: index.html
docs/tjr_monad/Tjr_monad/State_passing/State_passing_type/: index.html
docs/tjr_monad/Tjr_monad/Types/: index.html
docs/tjr_monad/Tjr_monad/With_state/: index.html
docs/tjr_monad/Tjr_monad__/: index.html
docs/tjr_monad/Tjr_monad__/Monad_ops/: index.html
docs/tjr_monad/Tjr_monad__/State_passing/: index.html
docs/tjr_monad/Tjr_monad__/State_passing/Internal/: index.html
docs/tjr_monad/Tjr_monad__/With_state/: index.html
docs/tjr_monad/Tjr_monad__Event/: index.html
docs/tjr_monad/Tjr_monad__Imperative/: index.html
docs/tjr_monad/Tjr_monad__Imperative/Internal/: index.html
docs/tjr_monad/Tjr_monad__Lwt_instance/: index.html
docs/tjr_monad/Tjr_monad__Lwt_instance/Internal/: index.html
docs/tjr_monad/Tjr_monad__Monad_ops/: index.html
docs/tjr_monad/Tjr_monad__Mref/: index.html
docs/tjr_monad/Tjr_monad__Mref_plus/: index.html
docs/tjr_monad/Tjr_monad__State_passing/: index.html
docs/tjr_monad/Tjr_monad__State_passing/Internal/: index.html
docs/tjr_monad/Tjr_monad__State_passing/Internal/Iso/: index.html
docs/tjr_monad/Tjr_monad__State_passing/Internal/Made/: index.html
docs/tjr_monad/Tjr_monad__State_passing/Internal/Make/: index.html
docs/tjr_monad/Tjr_monad__State_passing/Internal/module-type-ISO/: index.html
docs/tjr_monad/Tjr_monad__State_passing/State_passing_type/: index.html
docs/tjr_monad/Tjr_monad__Types/: index.html
docs/tjr_monad/Tjr_monad__With_state/: index.html
src/: dune  event.ml  imperative.ml  monad_intf.ml  mref.ml  mref_plus.ml  state_passing.ml  summary.ml  summary.t.ml  tjr_monad.ml  types.ml  with_lwt.ml  with_state.ml  x_monad_ops.mli_  x_with_state.ml_
src/_todo/: imperative.ml  types.ml
src/lwt/: lwt_instance.ml
(+8 files in other folders)
