opam-version: "1.2"
name: "tjr_monad"
version: "0.0.1" # version should match a VERSION file in this dir

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_monad"
bug-reports: "https://github.com/tomjridge/tjr_monad/issues"

# ----------------------------------------------------------------------

depends: [ "lwt" ]

# ----------------------------------------------------------------------


build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

# build: [make "build"]

# install: [make "install"]

# remove: [make "uninstall"]
